--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <link rel="stylesheet" href="https://use.typekit.net/cdh5vaw.css">
 </head>
 
 <body>
